# kraken-os

./: CMakeLists.txt  DYNAMIC_APPS_README.md  DYNAMIC_APP_LOADING_FIX.md  DYNAMIC_APP_LOADING_STATUS.md  DYNAMIC_LOADER_SUMMARY.md  FINAL_STATUS.md  FLASH_XIP_ISSUE.md  FLASH_XIP_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  Makefile.apps  QUICK_REFERENCE.md  README.md  build.sh  build_app.py  build_dynamic_app.py  build_pic_app.sh  extract_apps.sh  load_app_from_partition.c  partitions.csv  sdkconfig  sdkconfig.bak  sdkconfig.defaults  sdkconfig.old
components/apps/: CMakeLists.txt
components/apps/goodbye/: goodbye_app.c  goodbye_app.h
components/apps/hello/: hello_app.c  (+1 more)
components/audio/: CMakeLists.txt
components/bluetooth/: CMakeLists.txt
components/display/: CMakeLists.txt
components/display/include/: display_service.h
components/display/src/: display_service.c
components/display/ui/: ui_mainmenu.c  ui_mainmenu.h  ui_topbar.c  ui_topbar.h
components/display/ui_common/: ui_button.c  ui_button.h  ui_keyboard.c  ui_keyboard.h  ui_styles.h  ui_toggle.c  ui_toggle.h
components/input/: CMakeLists.txt
components/network/: CMakeLists.txt
components/power/: CMakeLists.txt
components/system/: CMakeLists.txt  Kconfig
components/system/examples/: basic_example.c  main_init_example.c
components/system/include/system_service/: app_downloader.h  app_loader.h  app_manager.h  app_sdk.h  app_storage.h  app_symbol_table.h  common_events.h  error_codes.h  event_bus.h  memory_utils.h  service_manager.h  system_service.h  system_types.h
components/system/private/: app_context_refcount.h  app_internal.h  app_lifecycle.h  handler_monitor.h  heap_monitor.h  log_control.h  memory_pool.h  priority_queue.h  request_response.h  resource_quota.h  security.h  service_dependencies.h  service_watchdog.h  system_internal.h
components/system/src/: app_context_refcount.c  app_downloader.c  app_lifecycle.c  app_loader.c  app_manager.c  app_storage.c  app_symbol_table.c  common_events.c  error_codes.c  event_bus.c  handler_monitor.c  heap_monitor.c  log_control.c  memory_pool.c  memory_utils.c  priority_queue.c  request_response.c  resource_quota.c  security.c  service_dependencies.c  service_manager.c  service_watchdog.c  system_service.c
docs/: APPS_VS_SERVICES.md  ARCHITECTURE.md  DYNAMIC_APP_LOADING.md  DYNAMIC_LOADING.md  INDEX.md  MEMORY_MANAGEMENT.md  QUICK_START_DYNAMIC_APPS.md  SERVICE_DEVELOPMENT.md  example_dynamic_apps.c  example_service.c  example_simple_app.c
main/: CMakeLists.txt  idf_component.yml  kraken.c
(+13 files in other folders)
