idf_component_register(
    SRCS 
        "src/system_service.c"
        "src/service_manager.c"
        "src/event_bus.c"
        "src/security.c"
        "src/app_manager.c"
        "src/memory_utils.c"
        "src/common_events.c"
    INCLUDE_DIRS 
        "include"
    PRIV_INCLUDE_DIRS
        "private"
    REQUIRES
        esp_timer
)
